--- a/SySPrac04AxelArenasC/html/SySPrac04AxelArenas.html
+++ b/SySPrac04AxelArenasC/html/SySPrac04AxelArenas.html
@@ -115,11 +115,7 @@ axis([-1 4 -0.1 0.6]);
 </pre><img vspace="5" hspace="5" src="SySPrac04AxelArenas_01.png" alt=""> <pre>b)Calculado por MATLAB</pre><pre class="codeinput">x=@(t)(-t+1).*(t&gt;=0 &amp; t&lt;1)+(t-1).*(t&gt;=1 &amp; t&lt;2);
 h=@(t)(1).*(t&gt;=0 &amp; t&lt;1);
 convconm(x,h);
-</pre><pre class="codeoutput error">Undefined function 'convconm' for input arguments of type 'function_handle'.
-
-Error in SySPrac04AxelArenas (line 273)
-convconm(x,h);
-</pre><h2 id="16">Ejercicio 2</h2><pre>a)Anal&iacute;tico</pre><pre class="codeinput">figure
+</pre><img vspace="5" hspace="5" src="SySPrac04AxelArenas_02.png" alt=""> <h2 id="16">Ejercicio 2</h2><pre>a)Anal&iacute;tico</pre><pre class="codeinput">figure
 subplot(1,3,1)
 syms <span class="string">t</span>
 x=piecewise(t&lt;0,0,0&lt;t&lt;1,t,1&lt;t&lt;2,1,t&gt;2,0);
@@ -146,10 +142,10 @@ plot(t4, 5-(t4));
 grid <span class="string">on</span>
 title(<span class="string">'x(t)*h(t)'</span>)
 axis([-1 6 -0.1 1.5]);
-</pre><pre>b)Calculado por MATLAB</pre><pre class="codeinput">x=@(t)(1).*(t&gt;=1 &amp; t&lt;3);
+</pre><img vspace="5" hspace="5" src="SySPrac04AxelArenas_03.png" alt=""> <pre>b)Calculado por MATLAB</pre><pre class="codeinput">x=@(t)(1).*(t&gt;=1 &amp; t&lt;3);
 h=@(t)(t).*(t&gt;=0 &amp; t&lt;1)+(1).*(t&gt;=1 &amp; t&lt;2);
 convconm(x,h);
-</pre><h2 id="19">Ejercicio 3</h2><pre>a)Anal&iacute;tico</pre><pre class="codeinput">figure
+</pre><img vspace="5" hspace="5" src="SySPrac04AxelArenas_04.png" alt=""> <img vspace="5" hspace="5" src="SySPrac04AxelArenas_05.png" alt=""> <h2 id="19">Ejercicio 3</h2><pre>a)Anal&iacute;tico</pre><pre class="codeinput">figure
 subplot(1,3,1)
 syms <span class="string">t</span>
 x=piecewise(t&lt;0,0,0&lt;=t&lt;3,1,3&lt;t&lt;=4,-1,t&gt;4,0);
@@ -180,10 +176,24 @@ plot(t6,(t6-4))
 grid <span class="string">on</span>
 title(<span class="string">'Autocorrelaci&oacute;n x(t)*x(-t)'</span>)
 axis([-4.75 4.75 -1.25 4.25]);
-</pre><pre>b)Calculado por MATLAB</pre><pre class="codeinput">g = @(t)((t&gt;=0&amp;t&lt;=3)-2.*(t&gt;=3&amp;t&lt;=4)+(t&gt;=3&amp;t&lt;=4))
+</pre><img vspace="5" hspace="5" src="SySPrac04AxelArenas_06.png" alt=""> <pre>b)Calculado por MATLAB</pre><pre class="codeinput">g = @(t)((t&gt;=0&amp;t&lt;=3)-2.*(t&gt;=3&amp;t&lt;=4)+(t&gt;=3&amp;t&lt;=4))
 f = @(t) -(-(t&lt;=0&amp;t&gt;=-3)+2.*(t&lt;=-3&amp;t&gt;=-4)-(t&lt;=-3&amp;t&gt;=-4))
 convconm(g,f)
-</pre><h2 id="22">Ejercicio 4</h2><pre>a)Anal&iacute;tico</pre><pre class="codeinput">figure
+</pre><pre class="codeoutput">
+g =
+
+  function_handle with value:
+
+    @(t)((t&gt;=0&amp;t&lt;=3)-2.*(t&gt;=3&amp;t&lt;=4)+(t&gt;=3&amp;t&lt;=4))
+
+
+f =
+
+  function_handle with value:
+
+    @(t)-(-(t&lt;=0&amp;t&gt;=-3)+2.*(t&lt;=-3&amp;t&gt;=-4)-(t&lt;=-3&amp;t&gt;=-4))
+
+</pre><img vspace="5" hspace="5" src="SySPrac04AxelArenas_07.png" alt=""> <h2 id="22">Ejercicio 4</h2><pre>a)Anal&iacute;tico</pre><pre class="codeinput">figure
 subplot(1,3,1)
 syms <span class="string">t</span>
 x=piecewise(t&lt;0,0,0&lt;t&lt;3,1,3&lt;t&lt;4,-1,t&gt;4,0);
@@ -216,10 +226,24 @@ plot(t7,t7-4);
 grid <span class="string">on</span>
 title(<span class="string">'Autocorrelaci&oacute;n'</span>)
 axis([-5 5 -2.25 3.25 ]);
-</pre><pre>b)Calculado por MATLAB</pre><pre class="codeinput">g = @(t)((t&gt;=0&amp;t&lt;=2)-2.*(t&gt;=2&amp;t&lt;2)-(t&gt;=2&amp;t&lt;=4))
+</pre><img vspace="5" hspace="5" src="SySPrac04AxelArenas_08.png" alt=""> <pre>b)Calculado por MATLAB</pre><pre class="codeinput">g = @(t)((t&gt;=0&amp;t&lt;=2)-2.*(t&gt;=2&amp;t&lt;2)-(t&gt;=2&amp;t&lt;=4))
 f = @(t) -(-(t&lt;=0&amp;t&gt;=-3)+2.*(t&lt;=-3&amp;t&gt;=-4)-(t&lt;=-3&amp;t&gt;=-4))
 convconm(g,f)
-</pre><p class="footer"><br><a href="http://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2017b</a><br></p></div><!--
+</pre><pre class="codeoutput">
+g =
+
+  function_handle with value:
+
+    @(t)((t&gt;=0&amp;t&lt;=2)-2.*(t&gt;=2&amp;t&lt;2)-(t&gt;=2&amp;t&lt;=4))
+
+
+f =
+
+  function_handle with value:
+
+    @(t)-(-(t&lt;=0&amp;t&gt;=-3)+2.*(t&lt;=-3&amp;t&gt;=-4)-(t&lt;=-3&amp;t&gt;=-4))
+
+</pre><img vspace="5" hspace="5" src="SySPrac04AxelArenas_09.png" alt=""> <p class="footer"><br><a href="http://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2017b</a><br></p></div><!--
 ##### SOURCE BEGIN #####
 %%
 % <html>
