--- a/SySPrac04AxelArenasC/html/SySPrac04AxelArenas.html
+++ b/SySPrac04AxelArenasC/html/SySPrac04AxelArenas.html
@@ -77,7 +77,7 @@ table td { padding:7px 5px; text-align:left; vertical-align:top; border:1px soli
 <ol>
 <li>Arenas Caldera Axel Jacobo</li>
 <li>Islas Martinez Porfirio Ezequiel</li>
-<li>Angeles Cornejo Maria de los Angeles</li>
+<li>Cornejo Martínez Maria de los Angeles</li>
 <li>Moreno Pilar Yael Maximiliano</li>
 </ol>
 <p> Grupo 2TV1 </p>
