--- a/SySPrac04AxelArenasC/html/SySPrac04AxelArenas.html
+++ b/SySPrac04AxelArenasC/html/SySPrac04AxelArenas.html
@@ -328,7 +328,7 @@ f =
 %% *Regla del trapecio Compuesta*
 % Es  una generalización de la regla de trapecio para obtener una mejor aproximación  de la integral
 % y consiste en subdividir el intervalo $\left[  {a,b} \right]$ en $n$ subintervalos,  
-% todos de la misma longitud $$h  = \frac{{b - a}}{n}$.  Se aplica la fórmula $  \int_a^b f\left( x \right)dx \approx \frac{h}{2}\left[ {f\left( a  \right) + 2\mathop \sum \limits_{k = 1}^{n - 1} f\left( {{x_k}} \right) +  f\left( b \right)} \right]$.
+% todos de la misma longitud $$h  = \frac{{b - a}}{n}$.  Se aplica la fórmula $  \int_a^b f\left( x \right)dx \approx \frac{h}{2}\left[ {f\left( a  \right) + 2\mathop \sum \limits_{k = 1}^{n - 1} f\left( {{x_k}} \right) +  f\left( b \right)} \right]$$.
 %
 %% _*Regla de Simpson 1/3*_
 % Método de integración para calcular integrales definidas donde se conectan grupos sucesivos de tres
